# pico-square-immersion

./: CMakeLists.txt  build.sh
src/: TLV_registry.cpp  TLV_registry.hpp  display.c  display.h  font6x8.h  generated_tlv.h  led.c  led.h  lwipopts.h  midi-state-machine.cpp  midi-state-machine.hpp  network-source.cpp  network-source.hpp  ntp.cpp  ntp.hpp  pico-square-immersion.cpp  simple-stupid-synth.cpp  simple-stupid-synth.hpp  tlv.h  tlv_header.h  tlv_type.h  tlv_type_payload.h  wifi-stuff.cpp  wifi-stuff.hpp
